[fix] Menu right overflowed fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,6 +12,7 @@ html {
 body {
   background: #040405;
   font-family: "Inter", sans-serif;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
